tests/compile_errors/match-value-condition-type.buzz
// Bad `match` condition type
import "buzz:std";

test "match value condition type" {
    std\assert(
        match (true) {
            "true" -> "string",
            else -> "bool",
        } == "bool",
    );
}
